domaine and infrastructure implementation of marking user profile pictures as featured use case